// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for long lived branch 1`] = `
<tr>
  <td>
    <BranchLikeIcon
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "isMain": false,
          "name": "branch-6.7",
          "type": "LONG",
        }
      }
      className="little-spacer-right"
    />
    branch-6.7
  </td>
  <td
    className="thin nowrap"
  >
    <Connect(BranchStatus)
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "isMain": false,
          "name": "branch-6.7",
          "type": "LONG",
        }
      }
      component="my-project"
    />
  </td>
  <td
    className="thin nowrap text-right big-spacer-left"
  >
    <DateFromNow
      date="2018-01-01"
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    <ActionsDropdown
      className="big-spacer-left"
    >
      <ActionsDropdownItem
        className="js-delete"
        destructive={true}
        onClick={[MockFunction]}
      >
        project_branch_pull_request.branch.delete
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`should render correctly for mai branch 1`] = `
<tr>
  <td>
    <BranchLikeIcon
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "isMain": true,
          "name": "master",
        }
      }
      className="little-spacer-right"
    />
    master
    <div
      className="badge spacer-left"
    >
      branches.main_branch
    </div>
  </td>
  <td
    className="thin nowrap"
  >
    <Connect(BranchStatus)
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "isMain": true,
          "name": "master",
        }
      }
      component="my-project"
    />
  </td>
  <td
    className="thin nowrap text-right big-spacer-left"
  >
    <DateFromNow
      date="2018-01-01"
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    <ActionsDropdown
      className="big-spacer-left"
    >
      <ActionsDropdownItem
        className="js-rename"
        onClick={[MockFunction]}
      >
        project_branch_pull_request.branch.rename
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`should render correctly for pull request 1`] = `
<tr>
  <td>
    <BranchLikeIcon
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "base": "master",
          "branch": "feature/foo/bar",
          "key": "1001",
          "target": "master",
          "title": "Foo Bar feature",
        }
      }
      className="little-spacer-right"
    />
    1001 – Foo Bar feature
  </td>
  <td
    className="thin nowrap"
  >
    <Connect(BranchStatus)
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "base": "master",
          "branch": "feature/foo/bar",
          "key": "1001",
          "target": "master",
          "title": "Foo Bar feature",
        }
      }
      component="my-project"
    />
  </td>
  <td
    className="thin nowrap text-right big-spacer-left"
  >
    <DateFromNow
      date="2018-01-01"
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    <ActionsDropdown
      className="big-spacer-left"
    >
      <ActionsDropdownItem
        className="js-delete"
        destructive={true}
        onClick={[MockFunction]}
      >
        project_branch_pull_request.pull_request.delete
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`should render correctly for short lived branch 1`] = `
<tr>
  <td>
    <BranchLikeIcon
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "isMain": false,
          "mergeBranch": "master",
          "name": "feature/foo",
          "type": "SHORT",
        }
      }
      className="little-spacer-right"
    />
    feature/foo
  </td>
  <td
    className="thin nowrap"
  >
    <Connect(BranchStatus)
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "isMain": false,
          "mergeBranch": "master",
          "name": "feature/foo",
          "type": "SHORT",
        }
      }
      component="my-project"
    />
  </td>
  <td
    className="thin nowrap text-right big-spacer-left"
  >
    <DateFromNow
      date="2018-01-01"
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    <ActionsDropdown
      className="big-spacer-left"
    >
      <ActionsDropdownItem
        className="js-delete"
        destructive={true}
        onClick={[MockFunction]}
      >
        project_branch_pull_request.branch.delete
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;
